--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "version": "8.0.0-mod.1",
   "name": "@nuxtjs/i18n-monorepo",
   "description": "The monorepo for @nuxtjs/i18n",
   "license": "MIT",
